<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.homelyassist.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_register_login"
        android:name="com.homelyassist.ui.dashboard.RegisterLoginAssistFragment"
        android:label="@string/title_register_login"
        tools:layout="@layout/fragment_register_login_assist" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.homelyassist.ui.notifications.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />
</navigation>